# ctypes_sizes

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
